--- a/data/cards/04162088.yaml
+++ b/data/cards/04162088.yaml
@@ -3,7 +3,7 @@ password: 4162088
 name:
   en: Cyber Laser Dragon
   de: Cyber Laser Drache
-  es: Ciber Dragón Láser
+  es: Dragón Ciber Láser
   fr: Dragon Cyber Laser
   it: Drago Cyber Laser
   pt:
