--- a/data/cards/23898021.yaml
+++ b/data/cards/23898021.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Falls diese Karte als Normalbeschwörung beschworen wird, werden ihre Grund-ATK zu 1000. (Schnelleffekt): Du kannst 1 FINSTERNIS Monster als Tribut anbieten; zeige 3 Normale Fallen von deinem Deck vor, dein Gegner bestimmt zufällig 1 von ihnen, die du auf deine Spielfeldseite setzt, und du mischst die restlichen in dein Deck zurück. Du kannst diesen Effekt von „Lilith, Dame der Wehklage“ nur einmal pro Spielzug verwenden.
   es: |-
-    Si esta carta es Invocada de Modo Normal, su ATK original se convierte en 1000. (Efecto Rápido): puedes Sacrificar 1 monstruo de OSCURIDAD; muestra 3 Trampas Normales en tu Deck, tu adversario elige 1 al azar para que la Coloques en tu Campo, y barajas el resto a tu Deck. Sólo puedes usar este efecto de "Lilith, Dama del Lamento" una vez por turno.
+    Si esta carta es Invocada de Modo Normal, su ATK original se convierte en 1000. (Efecto Rápido): puedes Sacrificar 1 monstruo de OSCURIDAD; muestra 3 Trampas Normales en tu Deck, tu adversario elige 1 al azar para que la Coloques en tu Campo, y barajas el resto de vuelta a tu Deck. Sólo puedes usar este efecto de "Lilith, Dama del Lamento" una vez por turno.
   fr: |-
     Si cette carte est Invoquée Normalement, son ATK d'origine devient 1000. (Effet Rapide) : vous pouvez Sacrifier 1 monstre TÉNÈBRES ; révélez 3 Pièges Normaux depuis votre Deck, votre adversaire en choisit 1 au hasard pour vous à Poser sur votre Terrain, et vous mélangez les cartes restantes dans votre Deck. Vous ne pouvez utiliser cet effet de "Lilith, Dame de la Lamentation" qu'une fois par tour.
   it: |-
