--- a/data/cards/25643346.yaml
+++ b/data/cards/25643346.yaml
@@ -17,9 +17,9 @@ text:
   en: |-
     (Quick Effect): You can Tribute 2 monsters, then target 1 of your Normal Traps that is banished or in your GY; Set that target, but place it on the bottom of the Deck when it leaves the field. You can only use this effect of "Malice, Lady of Lament" once per turn.
   de: |-
-    (Schnelleffekt): Du kannst 2 Monster als Tribut anbieten und dann 1 deiner Normalen Fallen wählen, die verbannt ist oder sich in deinem Friedhof befindet; setze das gewählte Ziel, aber lege es unters Deck, wenn es das Spielfeld verlässt. Du kannst diesen Effekt von „Malice, Dame des Jammers“ nur einmal pro Spielzug verwenden.
+    (Schnelleffekt): Du kannst 2 Monster als Tribut anbieten und dann 1 deiner Normalen Fallen wählen, die verbannt ist oder sich in deinem Friedhof befindet; setze jenes gewählte Ziel, aber lege es unters Deck, wenn es das Spielfeld verlässt. Du kannst diesen Effekt von „Malice, Dame des Jammers“ nur einmal pro Spielzug verwenden.
   es: |-
-    (Efecto Rápido): puedes Sacrificar 2 monstruos, y después seleccionar 1 de tus Trampas Normales que esté desterrada o en tu Cementerio; Coloca ese objetivo, pero ponlo en el fondo del Deck cuando deje el Campo. Sólo puedes usar este efecto de "Malicia, Dama del Lamento" una vez por turno.
+    (Efecto Rápido): puedes Sacrificar 2 monstruos, y después seleccionar 1 de tus Trampas Normales que esté desterrada o en tu Cementerio; Coloca ese objetivo, pero ponlo en la parte inferior del Deck cuando deje el Campo. Sólo puedes usar este efecto de "Malicia, Dama del Lamento" una vez por turno.
   fr: |-
     (Effet Rapide) : vous pouvez Sacrifier 2 monstres, puis ciblez 1 de vos Pièges Normaux qui est banni ou dans votre Cimetière ; Posez la cible, mais placez-la au-dessous du Deck lorsqu'elle quitte le Terrain. Vous ne pouvez utiliser cet effet de "Malice, Dame de la Lamentation" qu'une fois par tour.
   it: |-
