--- a/data/cards/37469904.yaml
+++ b/data/cards/37469904.yaml
@@ -19,11 +19,11 @@ text:
   de: |-
     Falls eine Karte in der Pendelzone liegt: Füge deiner Hand 1 „Pendel“-Pendelmonster oder „Pendel“-Zauber/Falle von deinem Deck hinzu. Du kannst nur 1 „Duellantenallianz“ pro Spielzug aktivieren.
   es: |-
-    Si hay una carta en la Zona del Péndulo: añade a tu mano 1 Monstruo de Péndulo "Péndulo" o 1 Mágica/Trampa "Péndulo" en tu Deck. Sólo puedes activar 1 "Alianza de Duelistas" por turno.
+    Si hay una carta en la Zona de Péndulo: añade a tu mano 1 Monstruo de Péndulo "Péndulo" o 1 Mágica/Trampa "Péndulo" en tu Deck. Sólo puedes activar 1 "Alianza de Duelistas" por turno.
   fr: |-
     S'il y a une carte dans la Zone Pendule : ajoutez 1 Monstre Pendule "Pendule" ou Magie/Piège "Pendule" depuis votre Deck à votre main. Vous ne pouvez activer qu'1 "L'Alliance des Duellistes" par tour.
   it: |-
-    Se c'è una carta nella Zona Pendulum: aggiungi 1 Mostro Pendulum "Pendulum" o 1 Magia/Trappola "Pendulum" dal tuo Deck alla tua mano. Puoi attivare solo 1 "Alleanza dei Duellanti" per turno.
+    Se c'è una carta nella Zona Pendulum: aggiungi 1 Mostro Pendulum "Pendulum" o Magia/Trappola "Pendulum" dal tuo Deck alla tua mano. Puoi attivare solo 1 "Alleanza dei Duellanti" per turno.
   pt: |-
     Se houver um card na Zona de Pêndulo: adicione 1 Monstro Pêndulo "Pêndulo" ou Magia/Armadilha "Pêndulo" do seu Deck à sua mão. Você só pode ativar 1 "Aliança dos Duelistas" por turno.
   ja: |-
