--- a/data/cards/42378577.yaml
+++ b/data/cards/42378577.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     You can target 1 card in your Pendulum Zone; Special Summon it. You can target 1 Pendulum Monster in your Monster Zone; place that Pendulum Monster in your Pendulum Zone. You can only use 1 "Pendulum Switch" effect per turn, and only once that turn.
   de: |-
-    Du kannst 1 Karte in deiner Pendelzone wählen; beschwöre sie als Spezialbeschwörung. Du kannst 1 Pendelmonster in deiner Monsterzone wählen; lege das Pendelmonster in deine Pendelzone. Du kannst nur 1 Effekt von „Pendeltausch“ pro Spielzug verwenden und in dem Spielzug nur einmal.
+    Du kannst 1 Karte in deiner Pendelzone wählen; beschwöre sie als Spezialbeschwörung. Du kannst 1 Pendelmonster in deiner Monsterzone wählen; lege jenes Pendelmonster in deine Pendelzone. Du kannst nur 1 Effekt von „Pendeltausch“ pro Spielzug verwenden und in jenem Spielzug nur einmal.
   es: |-
     Puedes seleccionar 1 carta en tu Zona de Péndulo; Invócala de Modo Especial. Puedes seleccionar 1 Monstruo de Péndulo en tu Zona de Monstruos; pon ese Monstruo de Péndulo en tu Zona de Péndulo. Sólo puedes usar 1 efecto de "Trueque de Péndulo" por turno, y sólo una vez ese turno.
   fr: |-
@@ -25,7 +25,7 @@ text:
   it: |-
     Puoi scegliere come bersaglio 1 carta nella tua Zona Pendulum; Evocala Specialmente. Puoi scegliere come bersaglio 1 Mostro Pendulum nella tua Zona Mostri; metti quel Mostro Pendulum nella tua Zona Pendulum. Puoi utilizzare solo 1 effetto di "Sostituzione Pendulum" per turno, e solo una volta in quel turno.
   pt: |-
-    Você pode escolher 1 card na sua Zona de Pêndulo; Invoque-o por Invocação-Especial. Você pode escolher 1 Monstro de Pêndulo na sua Zona de Monstros; coloque-o na sua Zona de Pêndulo. Você só pode usar 1 efeito de "Troca de Pêndulo" por turno e apenas uma vez por turno.
+    Você pode escolher 1 card na sua Zona de Pêndulo; Invoque-o por Invocação-Especial. Você pode escolher 1 Monstro Pêndulo na sua Zona de Monstros; coloque esse Monstro Pêndulo na sua Zona de Pêndulo. Você só pode usar 1 efeito de "Troca de Pêndulo" por turno e apenas uma vez por turno.
   ja: |-
     このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：自分のＰゾーンのカード１枚を対象として発動できる。そのカードを特殊召喚する。②：自分のモンスターゾーンのＰモンスター１体を対象として発動できる。そのＰモンスターを自分のＰゾーンに置く。
   ko: |-
