--- a/data/cards/56196385.yaml
+++ b/data/cards/56196385.yaml
@@ -32,9 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지에서 야수족 / 야수전사족 / 비행야수족 몬스터를 임의의 수만큼 제외하고 발동할 수 있다. 제외한 수와 같은 수의 링크 마커를 가지는 야수족 / 야수전사족 / 비행야수족 링크 몬스터 1장을 엑스트라 덱에서 특수 소환한다. 이 턴에, 자신은 야수족 / 야수전사족 / 비행야수족 몬스터밖에 링크 소재로 할 수 없다. ②: 이 카드가 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 "트라이브리게이드 키트" 이외의 "트라이브리게이드" 카드 1장을 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：从自己墓地把兽族·兽战士族·鸟兽族怪兽任意数量除外才能发动。把持有和除外数量相同数量的连接标记的1只兽族·兽战士族·鸟兽族连接怪兽从额外卡组特殊召唤。这个回合，自己不是兽族·兽战士族·鸟兽族怪兽不能作为连接素材。
-    ②：这张卡被送去墓地的场合才能发动。从卡组把「铁兽战线 姬特」以外的1张「铁兽」卡送去墓地。
+    此卡名的①②效果1回合仅可各使用1次。①：从自己的墓地将任意数量的兽族・兽战士族・鸟兽族怪兽除外可以发动。从额外牌组将1只拥有与除外数量相同数量的连接标记的兽族・兽战士族・鸟兽族连接怪兽特殊召唤。此回合，自己仅可以兽族・兽战士族・鸟兽族怪兽作为连接素材。②：此卡被送至墓地的情况下可以发动。从牌组将1张"铁兽战线 姬特"以外的"铁兽"卡送至墓地。
 card_type: Monster
 monster_type_line: Beast / Effect
 attribute: FIRE
@@ -87,4 +85,9 @@ sets:
     set_name: Advanced Event Pack 2022 Vol.1 Version 2
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: MGP5-SC120
+    set_name: Mega Pack 05
+    rarities:
+    - Prismatic Secret Rare
 yugipedia_page_id: '773228'
