--- a/data/cards/60743819.yaml
+++ b/data/cards/60743819.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     Target 1 monster in your opponent's Graveyard; shuffle it into the Deck, then you can send 1 Fiend-Type monster from your Deck to the Graveyard.
   de: |-
-    Wähle 1 Monster im Friedhof deines Gegners; mische es ins Deck, dann kannst du 1 Monster vom Typ Unterweltler von deinem Deck auf den Friedhof legen.
+    Wähle 1 Monster im Friedhof deines Gegners; mische es ins Deck, dann kannst du 1 Unterweltler-Monster von deinem Deck auf den Friedhof legen.
   es: |-
-    Selecciona 1 monstruo en el Cementerio de tu adversario; barájalo al Deck, y después puedes mandar al Cementerio 1 monstruo de Tipo Demonio en tu Deck.
+    Selecciona 1 monstruo en el Cementerio de tu adversario; barájalo al Deck, y después puedes mandar al Cementerio 1 monstruo Demonio en tu Deck.
   fr: |-
-    Ciblez 1 monstre dans le Cimetière de votre adversaire ; mélangez-le dans le Deck, puis vous pouvez envoyer 1 monstre de Type Démon depuis votre Deck au Cimetière.
+    Ciblez 1 monstre dans le Cimetière de votre adversaire ; mélangez-le dans le Deck, puis vous pouvez envoyer 1 monstre Démon depuis votre Deck au Cimetière.
   it: |-
-    Scegli come bersaglio 1 mostro nel Cimitero del tuo avversario; mischialo nel Deck, poi puoi mandare 1 mostro di Tipo Demone dal tuo Deck al Cimitero.
+    Scegli come bersaglio 1 mostro nel Cimitero del tuo avversario; mischialo nel Deck, poi puoi mandare 1 mostro Demone dal tuo Deck al Cimitero.
   pt: |-
-    Escolha 1 monstro no Cemitério do seu oponente; embaralhe-o no Deck e, depois, você pode enviar 1 monstro do Tipo Demônio do seu Deck para o Cemitério.
+    Escolha 1 monstro no Cemitério do seu oponente; embaralhe-o no Deck e, depois, você pode enviar 1 monstro Demônio do seu Deck para o Cemitério.
   ja: |-
     ①：相手の墓地のモンスター１体を対象として発動できる。そのモンスターを相手のデッキに戻す。その後、自分のデッキから悪魔族モンスター１体を墓地へ送る事ができる。
   ko: |-
