--- a/data/cards/63394872.yaml
+++ b/data/cards/63394872.yaml
@@ -17,13 +17,13 @@ text:
   en: |-
     Once per turn, during your Main Phase, you can move 1 monster on your side of the field to an adjacent (horizontal) unoccupied Monster Card Zone.
   de: |-
-    Einmal pro Spielzug, während deiner Main Phase, kannst du 1 Monster auf deiner Spielfeldseite in eine benachbarte freie Monsterkartenzone bewegen.
+    Einmal pro Spielzug: Du kannst 1 Monster in deiner Main-Monsterzone wählen und 1 seiner nicht verwendeten (waagerecht) benachbarten Monsterzonen bestimmen; bewege jenes gewählte Ziel in die bestimmte benachbarte Zone.
   es: |-
-    Una vez por turno, durante tu Main Phase, puedes mover 1 monstruo en tu Campo a una Zona de Cartas de Monstruo que sea adyacente y no esté ocupada.
+    Una vez por turno: puedes seleccionar 1 monstruo en tu Zona de Monstruos Principal y elegir 1 de sus Zonas de Monstruos adyacentes (horizontales) que no estén siendo usadas; mueve ese objetivo a la zona adyacente elegida.
   fr: |-
-    Une fois par tour, durant votre Main Phase, vous pouvez déplacer 1 monstre sur votre Terrain vers une Zone Carte Monstre adjacente inoccupée.
+    Une fois par tour : vous pouvez cibler 1 monstre dans votre Zone Monstre Main et choisir 1 de ses Zones Monstre (horizontales) adjacentes inutilisées ; déplacez la cible dans la zone adjacente choisie.
   it: |-
-    Una volta per turno, durante la tua Main Phase, puoi spostare 1 mostro sul tuo Terreno in una Zona Mostro libera adiacente.
+    Una volta per turno: puoi scegliere come bersaglio 1 mostro nella tua Zona Mostri Main e selezionare 1 delle sue Zone Mostri inutilizzate adiacenti (orizzontalmente); sposta quel bersaglio nella zona selezionata adiacente.
   pt: |-
     Uma vez por turno: você pode escolher 1 monstro na sua Zona de Monstros Principal e selecionar 1 das suas Zonas de Monstros não utilizadas adjacentes (horizontal); mova o alvo para a zona adjacente selecionada.
   ja: |-
