--- a/data/cards/68774379.yaml
+++ b/data/cards/68774379.yaml
@@ -3,7 +3,7 @@ password: 68774379
 name:
   en: Cyber Barrier Dragon
   de: Cyber Barrier Drache
-  es: Ciber Dragón Barrera
+  es: Dragón Ciber Barrera
   fr: Dragon Cyber Barrière
   it: Drago Cyber Barriera
   pt: Cyber Dragão Barreira
