--- a/data/cards/73915051.yaml
+++ b/data/cards/73915051.yaml
@@ -19,13 +19,13 @@ text:
   de: |-
     Beschwöre 4 „Schaf-Spielmarken“ (Ungeheuer/ERDE/Stufe 1/ATK 0/DEF 0) als Spezialbeschwörung in die Verteidigungsposition. Sie können nicht als Tribut für eine Tributbeschwörung angeboten werden. Du kannst in dem Spielzug, in dem du diese Karte aktivierst, keine anderen Monster beschwören (aber du kannst Normal setzen).
   es: |-
-    Invoca de Modo Especial 4 "Fichas de Oveja" (Bestia/TIERRA/Nivel 1/ATK 0/DEF 0) en Posición de Defensa. Éstas no pueden ser Sacrificadas para una Invocación por Sacrificio. No puedes Invocar otros monstruos en el turno en el que activaste esta carta (pero sí puedes Colocar de Modo Normal).
+    Invoca de Modo Especial 4 "Ficha de Oveja" (Bestia/TIERRA/Nivel 1/ATK 0/DEF 0) en Posición de Defensa. Éstas no pueden ser Sacrificadas para una Invocación por Sacrificio. No puedes Invocar otros monstruos en el turno en el que activas esta carta (pero puedes Colocar de Modo Normal).
   fr: |-
     Invoquez Spécialement 4 "Jeton Mouton" (Bête/TERRE/Niveau 1/ATK 0/DEF 0) en Position de Défense. Ils ne peuvent pas être Sacrifiés pour une Invocation Sacrifice. Vous ne pouvez pas Invoquer d'autres monstres le tour où vous activez cette carte (mais vous pouvez Poser Normalement).
   it: |-
     Evoca Specialmente 4 "Segna-Montone" (Bestia/TERRA/Livello 1/ATK 0/DEF 0) in Posizione di Difesa. Non possono essere offerti come Tributo per un'Evocazione tramite Tributo. Non puoi Evocare altri mostri nel turno in cui attivi questa carta (ma puoi Posizionare Normalmente).
   pt: |-
-    Invoque por Invocação-Especial 4 "Fichas de Ovelha" (Besta/TERRA/Nível 1/ATK 0/DEF 0) em Posição de Defesa. Elas não podem ser oferecidas como Tributo para uma Invocação-Tributo. Você não pode Invocar outros monstros no turno em que ativar este card (mas pode Baixá-los Normalmente).
+    Invoque por Invocação-Especial 4 "Ficha de Ovelha" (Besta/TERRA/Nível 1/ATK 0/DEF 0) em Posição de Defesa. Elas não podem ser oferecidas como Tributo para uma Invocação-Tributo. Você não pode Invocar outros monstros no turno em que ativar este card (mas pode Baixá-los Normalmente).
   ja: |-
     このカードを発動するターン、自分はこのカードの効果以外ではモンスターを召喚・反転召喚・特殊召喚できない。①：自分フィールドに「羊トークン」（獣族・地・星１・攻／守０）４体を守備表示で特殊召喚する。このトークンはアドバンス召喚のためにはリリースできない。
   ko: |-
