--- a/data/cards/91989718.yaml
+++ b/data/cards/91989718.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Biete 1 „Cyber Drache“ auf deiner Spielfeldseite als Tribut an, um diese Karte zu aktivieren. Beschwöre 1 „Cyber Barrier Drache“-Karte von deiner Hand oder deinem Deck als Spezialbeschwörung.
   es: |-
-    Sacrifica 1 "Ciber Dragón" en tu Campo para activar esta carta. Invoca mediante una Invocación Especial 1 "Ciber Dragón Barrera" de tu mano o Deck.
+    Sacrifica 1 "Ciber Dragón" en tu Campo para activar esta carta. Invoca mediante una Invocación Especial 1 "Dragón Ciber Barrera" de tu mano o Deck.
   fr: |-
     Sacrifiez 1 "Cyber Dragon". Faites l'Invocation Spéciale d'1 "Cyber Dragon Barrière" depuis votre main ou votre Deck.
   it: |-
