--- a/data/cards/94145021.yaml
+++ b/data/cards/94145021.yaml
@@ -19,7 +19,7 @@ text:
   de: |-
     Falls der Hand deines Gegners eine oder mehr Karten vom Main Deck hinzugefügt werden, außer während der Draw Phase (Schnelleffekt): Du kannst diese Karte von deiner Hand auf den Friedhof legen; für den Rest dieses Spielzugs können keine Karten vom Main Deck eines Spielers der Hand hinzugefügt werden.
   es: |-
-    Si una o más cartas en el Deck Principal son añadidas a la mano de tu adversario, excepto durante la Draw Phase (Efecto Rápido): puedes mandar al Cementerio esta carta en tu mano; por el resto de este turno, no se pueden añadir cartas en el Deck Principal a la mano de ningún jugador.
+    Si una o más cartas en el Deck Principal son añadidas a la mano de tu adversario, excepto durante la Draw Phase (Efecto Rápido): puedes mandar al Cementerio esta carta en tu mano; por el resto de este turno, no se pueden añadir a la mano cartas en el Deck Principal de ningún jugador.
   fr: |-
     Si une ou plusieurs cartes sont ajoutées depuis le Main Deck à la main de votre adversaire, sauf durant la Draw Phase (Effet Rapide) : vous pouvez envoyer cette carte depuis votre main au Cimetière ; le reste de ce tour, les cartes ne peuvent pas être ajoutées depuis le Main Deck de chaque joueur à la main.
   it: |-
