--- a/data/cards/45869829.yaml
+++ b/data/cards/45869829.yaml
@@ -17,9 +17,9 @@ text:
   en: |-
     Target 1 Quick-Play Spell in your GY, except "Quick Booster"; shuffle that target into the Deck. If this card you control is destroyed by your opponent's card and sent to your GY: You can add 1 Quick-Play Spell from your Deck to your hand, except "Quick Booster".
   de: |-
-    Wähle 1 Schnellzauber in deinem Friedhof, außer „Schnellverstärker“; mische das gewählte Ziel ins Deck. Falls diese Karte, die du kontrollierst, durch eine Karte deines Gegners zerstört und auf deinen Friedhof gelegt wird: Du kannst deiner Hand 1 Schnellzauber von deinem Deck hinzufügen, außer „Schnellverstärker“.
+    Wähle 1 Schnellzauber in deinem Friedhof, außer „Schnellverstärker“; mische jenes gewählte Ziel ins Deck. Falls diese Karte, die du kontrollierst, durch eine Karte deines Gegners zerstört und auf deinen Friedhof gelegt wird: Du kannst deiner Hand 1 Schnellzauber von deinem Deck hinzufügen, außer „Schnellverstärker“.
   es: |-
-    Selecciona 1 Mágica de Juego Rápido en tu Cementerio, excepto "Aumentador Rápido"; baraja ese objetivo al Deck. Si esta carta que controlas es destruida por una carta de tu adversario y mandada a tu Cementerio: puedes añadir a tu mano, desde tu Deck, 1 Mágica de Juego Rápido, excepto "Aumentador Rápido".
+    Selecciona 1 Mágica de Juego Rápido en tu Cementerio, excepto "Aumentador Rápido"; baraja ese objetivo al Deck. Si esta carta que controlas es destruida por una carta de tu adversario y mandada a tu Cementerio: puedes añadir a tu mano 1 Mágica de Juego Rápido en tu Deck, excepto "Aumentador Rápido".
   fr: |-
     Ciblez 1 Magie Jeu-Rapide ("Boost Rapide" exclu) dans votre Cimetière ; mélangez la cible dans le Deck. Si cette carte que vous contrôlez est détruite par une carte de votre adversaire et envoyée à votre Cimetière : vous pouvez ajouter 1 Magie Jeu-Rapide ("Boost Rapide" exclu) depuis votre Deck à votre main.
   it: |-
