--- a/data/cards/58921041.yaml
+++ b/data/cards/58921041.yaml
@@ -21,11 +21,11 @@ text:
   es: |-
     Ambos jugadores deben Colocar las Cartas Mágicas antes de activarlas, y no las pueden activar hasta su próximo turno después de Colocarlas.
   fr: |-
-    Chaque joueur doit Poser les Cartes Magie avant de les activer, et il ne peut pas les activer avant son prochain tour après les avoir Posées.
+    Chaque joueur doit Poser les Cartes Magie avant de les activer, et il ne peut pas les activer jusqu'à son prochain tour après les avoir Posées.
   it: |-
     Entrambi i giocatori devono Posizionare le Carte Magia prima di attivarle, e non possono attivarle fino al loro prossimo turno dopo averle Posizionate.
   pt: |-
-    Os dois duelistas devem Baixar Cards de Magia antes de ativá-los e não podem fazê-lo até seu próximo turno depois de Baixá-los.
+    Os dois duelistas devem Baixar Cards de Magia antes de ativá-los e não podem ativá-los até seu próximo turno depois de Baixá-los.
   ja: |-
     ①：このカードが魔法＆罠ゾーンに存在する限り、お互いに魔法カードはセットしなければ発動できず、セットしたプレイヤーから見て次の自分ターンが来るまで発動できない。
   ko: |-
