--- a/data/cards/61641818.yaml
+++ b/data/cards/61641818.yaml
@@ -12,7 +12,7 @@ name:
   ko: 전뇌계수－론론
   ko_rr: Jeon-goegyesu - Ron Ron
   zh-TW:
-  zh-CN: 电脑堺龙-龙龙
+  zh-CN: 电脑堺蛟－龙龙
 text:
   en: |-
     2+ Level 3 monsters with the same Type and Attribute
@@ -40,10 +40,8 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 엑시즈 소재를 가진 이 카드는 상대 효과의 대상이 되지 않는다. ②: 상대 필드에 앞면 표시 몬스터가 존재하고, 상대가 자신 필드에 존재하지 않는 속성의 몬스터의 효과를 발동했을 때, 이 카드의 엑시즈 소재를 2개 제거하여 발동할 수 있다. 그 발동을 무효로 한다.
   zh-TW:
   zh-CN: |-
-    相同种族·属性的3星怪兽×2只以上
-    这个卡名的②的效果1回合只能使用1次。
-    ①：持有超量素材的这张卡不会成为对方的效果的对象。
-    ②：对方场上有表侧表示怪兽存在，对方把不在自身场上存在的属性的怪兽的效果发动时，把这张卡2个超量素材取除才能发动。那个发动无效。
+    相同种族・属性的等级3怪兽×2只以上
+    此卡名的②效果1回合仅可使用1次。①：持有超量素材的此卡不会成为对手效果的对象。②：对手场上有表侧表示怪兽存在，对手发动自身场上不存在的属性的怪兽的效果时，去除此卡的2个超量素材可以发动。将该发动无效。
 card_type: Monster
 monster_type_line: Wyrm / Xyz / Effect
 attribute: EARTH
@@ -108,5 +106,10 @@ sets:
     set_name: Premium Pack Vol.15
     rarities:
     - Normal Parallel Rare
+    - Super Rare
+  zh-CN:
+  - set_number: MGP5-SC196
+    set_name: Mega Pack 05
+    rarities:
     - Super Rare
 yugipedia_page_id: '719237'
