--- a/data/cards/80101899.yaml
+++ b/data/cards/80101899.yaml
@@ -17,15 +17,15 @@ text:
   en: |-
     Banish 1 Normal Trap from your Deck, except "Trap Trick", and Set 1 card with the same name directly from your Deck, also it can be activated this turn. You can only activate 1 Trap Card for the rest of this turn after this card resolves. You can only activate 1 "Trap Trick" per turn.
   de: |-
-    Verbanne 1 Normale Falle von deinem Deck, außer „Fallentrick“, und setze 1 Karte mit demselben Namen direkt von deinem Deck, zusätzlich kann sie in diesem Spielzug aktiviert werden. Du kannst für den Rest dieses Spielzugs, nachdem diese Karte aufgelöst wurde, nur 1 Fallenkarte aktivieren. Du kannst nur 1 „Fallentrick“ pro Spielzug aktivieren.
+    Verbanne 1 Normale Falle von deinem Deck, außer „Fallentrick“, und falls du dies tust, setze 1 Karte mit demselben Namen direkt von deinem Deck. Sie kann in diesem Spielzug aktiviert werden. Du kannst für den Rest dieses Spielzugs, nachdem diese Karte aufgelöst wurde, nur 1 Fallenkarte aktivieren. Du kannst nur 1 „Fallentrick“ pro Spielzug aktivieren.
   es: |-
-    Destierra 1 Trampa Normal en tu Deck, excepto "Truco de Trampa", y Coloca 1 carta con el mismo nombre directamente desde tu Deck, y además ésta puede ser activada este turno. Por el resto de este turno después de que se resuelva esta carta, puedes activar sólo 1 Carta de Trampa. Sólo puedes activar 1 "Truco de Trampa" por turno.
+    Destierra 1 Trampa Normal en tu Deck, excepto "Truco de Trampa" y, si lo haces, Coloca 1 carta con el mismo nombre directamente desde tu Deck. Ésta puede ser activada este turno. Por el resto de este turno después de que esta carta se resuelva, sólo puedes activar 1 Carta de Trampa. Sólo puedes activar 1 "Truco de Trampa" por turno.
   fr: |-
-    Bannissez 1 Piège Normal ("Combine de Piège" exclu) depuis votre Deck, et Posez 1 carte du même nom directement depuis votre Deck, et aussi, elle peut être activée ce tour. Le reste de ce tour après la résolution de cette carte, vous ne pouvez activer qu'1 Carte Piège. Vous ne pouvez activer qu'1 "Combine de Piège" par tour.
+    Bannissez 1 Piège Normal ("Combine de Piège" exclu) depuis votre Deck, et si vous le faites, Posez 1 carte du même nom directement depuis votre Deck. Elle peut être activée ce tour. Le reste de ce tour après la résolution de cette carte, vous ne pouvez activer qu'1 Carte Piège. Vous ne pouvez activer qu'1 "Combine de Piège" par tour.
   it: |-
-    Bandisci 1 Trappola Normale dal tuo Deck, eccetto "Trucco Trappola", e Posiziona 1 carta con lo stesso nome direttamente dal tuo Deck, inoltre essa può essere attivata in questo turno. Puoi attivare solo 1 Carta Trappola per il resto di questo turno dopo che questa carta si è risolta. Puoi attivare solo 1 "Trucco Trappola" per turno.
+    Bandisci 1 Trappola Normale dal tuo Deck, eccetto "Trucco Trappola", e, se lo fai, Posiziona 1 carta con lo stesso nome direttamente dal tuo Deck. Essa può essere attivata in questo turno. Puoi attivare solo 1 Carta Trappola per il resto di questo turno dopo che questa carta si è risolta. Puoi attivare solo 1 "Trucco Trappola" per turno.
   pt: |-
-    Bana 1 Armadilha Normal do seu Deck, exceto "Truque de Sapateado" e Baixe 1 card com o mesmo nome diretamente do seu Deck e, além disso, ele pode ser ativado neste turno. Você só pode ativar 1 Card de Armadilha pelo resto deste turno depois que este card resolver. Você só pode ativar 1 "Truque de Sapateado" por turno.
+    Bana 1 Armadilha Normal do seu Deck, exceto "Truque de Sapateado" e, se isso acontecer, Baixe 1 card com o mesmo nome diretamente do seu Deck. Ele pode ser ativado neste turno. Você só pode ativar 1 Card de Armadilha pelo resto deste turno depois que este card resolver. Você só pode ativar 1 "Truque de Sapateado" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：デッキから「トラップトリック」以外の通常罠カード１枚を除外し、その同名カード１枚をデッキから選んで自分フィールドにセットする。この効果でセットしたカードはセットしたターンでも発動できる。このカードの発動後、ターン終了時まで自分は罠カードを１枚しか発動できない。
   ko: |-
