--- a/data/cards/80141055.yaml
+++ b/data/cards/80141055.yaml
@@ -19,13 +19,13 @@ text:
   de: |-
     Während des Spielzugs deines Gegners können gesetzte Karten in deinen Zauber- & Fallenzonen nicht durch Karteneffekte zerstört werden. Falls eine oder mehr gesetzte Karten in deiner Zauber- & Fallenzone durch einen Karteneffekt eines Gegners zerstört werden: Diese Karte erhält bis zum Ende dieses Spielzugs 800 ATK.
   es: |-
-    Durante el turno de tu adversario, las cartas Colocadas en tus Zonas de Magia y Trampas no pueden ser destruidas por efectos de cartas. Si una o más cartas Colocadas en tu Zona de Magia y Trampas son destruidas por el efecto de una carta del adversario: hasta el final de este turno, esta carta gana 800 ATK.
+    Durante el turno de tu adversario, las cartas Colocadas en tus Zonas de Magia y Trampas no pueden ser destruidas por efectos de cartas. Si una o más cartas Colocadas en tu Zona de Magia y Trampas son destruidas por el efecto de una carta del adversario: esta carta gana 800 ATK hasta el final de este turno.
   fr: |-
     Durant le tour de votre adversaire, les cartes Posées dans vos Zones Magie & Piège ne peuvent pas être détruites par des effets de carte. Si une ou plusieurs cartes Posées dans votre Zone Magie & Piège sont détruites par un effet de carte de l'adversaire : jusqu'à la fin de ce tour, cette carte gagne 800 ATK.
   it: |-
     Durante il turno del tuo avversario, le carte Posizionate nelle tue Zone Magie & Trappole non possono essere distrutte dagli effetti delle carte. Se una o più carte Posizionate nella tua Zona Magie & Trappole vengono distrutte dall'effetto di una carta dell'avversario: questa carta guadagna 800 ATK fino alla fine di questo turno.
   pt: |-
-    Durante o turno do seu oponente, os cards Baixados na sua Zona de Magias & Armadilhas não podem ser destruídos por efeitos de card. Se um ou mais cards Baixados na sua Zona de Magias & Armadilhas forem destruídos por um efeito de card do oponente: este card ganha 800 de ATK até o final deste turno.
+    Durante o turno do seu oponente, os cards Baixados nas suas Zonas de Magias & Armadilhas não podem ser destruídos por efeitos de card. Se um ou mais cards Baixados na sua Zona de Magias & Armadilhas forem destruídos por um efeito de card do oponente: este card ganha 800 de ATK até o final deste turno.
   ja: |-
     ①：このカードがモンスターゾーンに存在する限り、相手ターンの間、自分の魔法＆罠ゾーンにセットされたカードは効果では破壊されない。②：自分の魔法＆罠ゾーンにセットされたカードが相手の効果で破壊される度に発動する。このカードの攻撃力はターン終了時まで８００アップする。
   ko: |-
