--- a/data/cards/08267140.yaml
+++ b/data/cards/08267140.yaml
@@ -74,6 +74,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   de:
   - set_number: TDIL-DE065
     set_name: The Dark Illusion
@@ -112,6 +113,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   fr:
   - set_number: TDIL-FR065
     set_name: The Dark Illusion
@@ -150,6 +152,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   it:
   - set_number: TDIL-IT065
     set_name: The Dark Illusion
@@ -188,6 +191,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   pt:
   - set_number: TDIL-PT065
     set_name: The Dark Illusion
@@ -221,6 +225,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   ja:
   - set_number: TDIL-JP065
     set_name: The Dark Illusion
