--- a/data/cards/60743819.yaml
+++ b/data/cards/60743819.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 恶魔的叹息
 text:
   en: |-
-    Target 1 monster in your opponent's Graveyard; shuffle it into the Deck, then you can send 1 Fiend-Type monster from your Deck to the Graveyard.
+    Target 1 monster in your opponent's GY; shuffle it into the Deck, then you can send 1 Fiend monster from your Deck to the GY.
   de: |-
     Wähle 1 Monster im Friedhof deines Gegners; mische es ins Deck, dann kannst du 1 Unterweltler-Monster von deinem Deck auf den Friedhof legen.
   es: |-
