--- a/data/cards/73915051.yaml
+++ b/data/cards/73915051.yaml
@@ -104,6 +104,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   de:
   - set_number: SDJ-G041
     set_name: 'Starter Deck: Joey'
@@ -176,6 +177,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   fr:
   - set_number: DDJ-F041
     set_name: 'Starter Deck: Joey'
@@ -248,6 +250,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   it:
   - set_number: MIJ-I041
     set_name: 'Starter Deck: Joey'
@@ -320,6 +323,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   pt:
   - set_number: DIJ-P041
     set_name: 'Starter Deck: Joey'
@@ -375,6 +379,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   ja:
   - set_number: L3-06
     set_name: 'Limited Edition 3: Joey Pack'
