--- a/data/cards/76794549.yaml
+++ b/data/cards/76794549.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 宙读之魔术士
 text:
   en: |-
-    If a card(s) you control is destroyed by battle or card effect: You can Special Summon this card from your hand, then you can choose 1 monster in the Graveyard, Extra Deck, or that is banished, and that was destroyed this turn, and add 1 monster with the same name from your Deck to your hand. You can banish this card you control, plus 4 monsters from your hand, field, and/or Graveyard (1 each with "Pendulum Dragon", "Xyz Dragon", "Synchro Dragon", and "Fusion Dragon" in their names); Special Summon 1 "Supreme King Z-ARC" from your Extra Deck. (This is treated as a Fusion Summon.)
+    If a card(s) you control is destroyed by battle or card effect: You can Special Summon this card from your hand, then you can choose 1 monster in the GY, Extra Deck, or that is banished, and that was destroyed this turn, and add 1 monster with the same name from your Deck to your hand. You can banish this card you control, plus 4 monsters from your hand, field, and/or GY (1 each with "Pendulum Dragon", "Xyz Dragon", "Synchro Dragon", and "Fusion Dragon" in their names); Special Summon 1 "Supreme King Z-ARC" from your Extra Deck. (This is treated as a Fusion Summon.)
   de: |-
     Falls eine oder mehr Karten, die du kontrollierst, durch Kampf oder einen Karteneffekt zerstört werden: Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören, dann kannst du 1 Monster im Friedhof, im Extra Deck oder das verbannt ist, und das in diesem Spielzug zerstört wurde, bestimmen und deiner Hand 1 Monster mit demselben Namen von deinem Deck hinzufügen. Du kannst diese Karte, die du kontrollierst, plus 4 Monster von deiner Hand, deiner Spielfeldseite und/oder deinem Friedhof (jeweils 1 mit „Pendeldrache“, „Xyz-Drache“, „Synchrodrache“ und „Fusionsdrache“ in ihren Namen) verbannen; beschwöre 1 „Oberster König Z-ARC“ als Spezialbeschwörung von deinem Extra Deck. (Dies wird als Fusionsbeschwörung behandelt.)
   es: |-
@@ -70,6 +70,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   de:
   - set_number: PEVO-DE001
     set_name: Pendulum Evolution
@@ -79,6 +80,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   fr:
   - set_number: PEVO-FR001
     set_name: Pendulum Evolution
@@ -88,6 +90,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   it:
   - set_number: PEVO-IT001
     set_name: Pendulum Evolution
@@ -97,6 +100,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   pt:
   - set_number: PEVO-PT001
     set_name: Pendulum Evolution
@@ -106,6 +110,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   ja:
   - set_number: SD31-JP001
     set_name: 'Structure Deck: Pendulum Evolution'
