--- a/data/cards/94145021.yaml
+++ b/data/cards/94145021.yaml
@@ -69,6 +69,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   de:
   - set_number: STBL-DE082
     set_name: Starstrike Blast
@@ -98,6 +99,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   fr:
   - set_number: STBL-FR082
     set_name: Starstrike Blast
@@ -127,6 +129,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   it:
   - set_number: STBL-IT082
     set_name: Starstrike Blast
@@ -156,6 +159,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   pt:
   - set_number: OP01-PT004
     set_name: OTS Tournament Pack 1
@@ -181,6 +185,7 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Rare
+    - Collector's Rare
   ja:
   - set_number: EXP4-JP023
     set_name: Extra Pack Volume 4
