--- a/data/cards/01225009.yaml
+++ b/data/cards/01225009.yaml
@@ -59,26 +59,31 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: TAMA-DE017
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: TAMA-FR017
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: TAMA-IT017
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: TAMA-PT017
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBTM-JP017
     set_name: 'Deck Build Pack: Tactical Masters'
