--- a/data/cards/13179234.yaml
+++ b/data/cards/13179234.yaml
@@ -55,26 +55,31 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: TAMA-DE011
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: TAMA-FR011
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: TAMA-IT011
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: TAMA-PT011
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBTM-JP011
     set_name: 'Deck Build Pack: Tactical Masters'
