--- a/data/cards/31562086.yaml
+++ b/data/cards/31562086.yaml
@@ -67,26 +67,31 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: TAMA-DE029
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: TAMA-FR029
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: TAMA-IT029
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: TAMA-PT029
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBTM-JP029
     set_name: 'Deck Build Pack: Tactical Masters'
