--- a/data/cards/33407125.yaml
+++ b/data/cards/33407125.yaml
@@ -56,26 +56,31 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Super Rare
+    - Collector's Rare
   de:
   - set_number: TAMA-DE021
     set_name: Tactical Masters
     rarities:
     - Super Rare
+    - Collector's Rare
   fr:
   - set_number: TAMA-FR021
     set_name: Tactical Masters
     rarities:
     - Super Rare
+    - Collector's Rare
   it:
   - set_number: TAMA-IT021
     set_name: Tactical Masters
     rarities:
     - Super Rare
+    - Collector's Rare
   pt:
   - set_number: TAMA-PT021
     set_name: Tactical Masters
     rarities:
     - Super Rare
+    - Collector's Rare
   ja:
   - set_number: DBTM-JP021
     set_name: 'Deck Build Pack: Tactical Masters'
