--- a/data/cards/40680521.yaml
+++ b/data/cards/40680521.yaml
@@ -96,26 +96,31 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: TAMA-DE009
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: TAMA-FR009
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: TAMA-IT009
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: TAMA-PT009
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBTM-JP009
     set_name: 'Deck Build Pack: Tactical Masters'
