--- a/data/cards/49131917.yaml
+++ b/data/cards/49131917.yaml
@@ -68,26 +68,31 @@ sets:
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   de:
   - set_number: TAMA-DE001
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   fr:
   - set_number: TAMA-FR001
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   it:
   - set_number: TAMA-IT001
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   pt:
   - set_number: TAMA-PT001
     set_name: Tactical Masters
     rarities:
     - Ultra Rare
+    - Collector's Rare
   ja:
   - set_number: DBTM-JP001
     set_name: 'Deck Build Pack: Tactical Masters'
