--- a/data/cards/26847978.yaml
+++ b/data/cards/26847978.yaml
@@ -12,7 +12,7 @@ name:
   ko: 트라이브리게이드 도화 페리지트
   ko_rr:
   zh-TW:
-  zh-CN: 铁兽战线 徒花之费莉吉特
+  zh-CN: 铁兽战线 谎花之费丽吉特
 text:
   en: |-
     2 Beast, Beast-Warrior, and/or Winged Beast monsters
@@ -40,10 +40,8 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 패에서 레벨 4 이하의 야수족 / 야수전사족 / 비행야수족 몬스터 1장을 특수 소환한다. 이 효과의 발동 후, 턴 종료시까지 자신은 야수족 / 야수전사족 / 비행야수족 몬스터로밖에 링크 소재로 할 수 없다. ②: 이 카드가 묘지로 보내졌을 경우에 발동할 수 있다. 자신은 덱에서 1장 드로우하고, 그 후 패를 1장 골라 덱 맨 아래로 되돌린다.
   zh-TW:
   zh-CN: |-
-    兽族·兽战士族·鸟兽族怪兽2只
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：自己主要阶段才能发动。从手卡把1只4星以下的兽族·兽战士族·鸟兽族怪兽特殊召唤。这个效果的发动后，直到回合结束时自己不是兽族·兽战士族·鸟兽族怪兽不能作为连接素材。
-    ②：这张卡被送去墓地的场合才能发动。自己从卡组抽1张，那之后选1张手卡回到卡组最下面。
+    兽族・兽战士族・鸟兽族怪兽2只
+    此卡名的①②效果1回合仅可各使用1次。①：在自己的主要阶段可以发动。从手牌将1只等级4以下的兽族・兽战士族・鸟兽族怪兽特殊召唤。此效果发动后，直至回合结束时为止，自己仅可将兽族・兽战士族・鸟兽族怪兽作为连接素材。②：此卡被送至墓地的情况下可以发动。自己从牌组抽1张，然后挑选1张手牌放回牌组最下面。
 card_type: Monster
 monster_type_line: Beast / Link / Effect
 attribute: EARTH
@@ -129,4 +127,9 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  zh-CN:
+  - set_number: MGP5-SC093
+    set_name: Mega Pack 05
+    rarities:
+    - Super Rare
 yugipedia_page_id: '760587'
