--- a/data/cards/36629203.yaml
+++ b/data/cards/36629203.yaml
@@ -8,7 +8,7 @@ name:
   it: Nucleo Distruttore Alleato della Giustizia
   pt: Aliado da Justiça Destruidor de Núcleo
   ja: <ruby>Ａ・Ｏ・Ｊ<rt>アーリー・オブ・ジャスティス</rt></ruby> コアデストロイ
-  ja_romaji: Ārī obu Jasutisu Koa Desutoroi
+  ja_romaji: Ārī Obu Jasutisu Koa Desutoroi
   ko: A·O·J 코어 디스트로이
   ko_rr:
   zh-TW:
