--- a/data/cards/14258627.yaml
+++ b/data/cards/14258627.yaml
@@ -8,7 +8,7 @@ name:
   it: Corazza Gaia, il Gigante della Terra
   pt: Platina Gaia, o Gigante da Terra
   ja: <ruby>地<rt>ち</rt></ruby><ruby>球<rt>きゅう</rt></ruby><ruby>巨<rt>きょ</rt></ruby><ruby>人<rt>じん</rt></ruby> ガイア・プレート
-  ja_romaji: Chikyū Kyojin Gaia Purēto
+  ja_romaji: Chikyūkyojin Gaia Purēto
   ko: 지구거인 가이아 플레이트
   ko_rr:
   zh-TW:
