--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -40,7 +40,7 @@ jobs:
         working-directory: yaml-yugi/data/cards
         run: |
           git rm --ignore-unmatch kdb*.yaml yugipedia*.yaml
-          python3 ../../src/main.py ../../../yaml-yugipedia/wikitext/cards ../../../yaml-yugi-zh/zh-CN
+          python3 ../../src/main.py ../../../yaml-yugipedia/wikitext/cards --zh-CN ../../../yaml-yugi-zh/zh-CN
       - name: Commit
         id: commit
         run: |
