--- a/data/cards/02311090.yaml
+++ b/data/cards/02311090.yaml
@@ -72,6 +72,10 @@ sets:
     set_name: Power of the Elements
     rarities:
     - Common
+  - set_number: 22YJ-JPO01
+    set_name: Spright Duel Set
+    rarities:
+    - Secret Rare
   ko:
   - set_number: POTE-KR007
     set_name: Power of the Elements
