--- a/data/cards/38436986.yaml
+++ b/data/cards/38436986.yaml
@@ -68,6 +68,10 @@ sets:
     set_name: Power of the Elements
     rarities:
     - Common
+  - set_number: 22YJ-JPO02
+    set_name: Tearlaments Duel Set
+    rarities:
+    - Secret Rare
   ko:
   - set_number: POTE-KR071
     set_name: Power of the Elements
