--- a/data/cards/76812113.yaml
+++ b/data/cards/76812113.yaml
@@ -12,7 +12,7 @@ name:
   ko: 해피 레이디
   ko_rr:
   zh-TW:
-  zh-CN: 鹰身女郎
+  zh-CN: 神鹰女郎
 text:
   en: |-
     This human-shaped animal with wings is beautiful to watch but deadly in battle.
