--- a/data/cards/90219263.yaml
+++ b/data/cards/90219263.yaml
@@ -12,7 +12,7 @@ name:
   ko: 만화경 －화려한 분신－
   ko_rr: Manhwagyeong - Hwaryeohan Bunsin
   zh-TW:
-  zh-CN: 万华镜-华丽的分身-
+  zh-CN: 万华镜－华丽的分身－
 text:
   en: |-
     If "Harpie Lady" is on the field: Special Summon 1 "Harpie Lady" or "Harpie Lady Sisters" from your hand or Deck.
@@ -32,7 +32,7 @@ text:
     ①: 필드에 "해피 레이디"가 존재할 경우에 발동할 수 있다. 패 / 덱에서 "해피 레이디" 또는 "해피 레이디 세자매" 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    ①：场上有「鹰身女郎」存在的场合才能发动。从手卡·卡组把1只「鹰身女郎」或者「鹰身女郎三姐妹」特殊召唤。
+    ①：场上有"神鹰女郎"存在的情况下可以发动。从手牌・牌组将1只"神鹰女郎"或"神鹰女郎三姐妹"特殊召唤。
 card_type: Spell
 property: Normal
 sets:
@@ -272,6 +272,11 @@ sets:
     rarities:
     - Common
   - set_number: DP21-KR008
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC011
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
