--- a/data/cards/91668401.yaml
+++ b/data/cards/91668401.yaml
@@ -12,7 +12,7 @@ name:
   ko: 사이버 엔젤－이자나－
   ko_rr: Saibeo Enjel - Ijana -
   zh-TW:
-  zh-CN: 电子化天使-伊舍那-
+  zh-CN: 电子天使－伊舍那－
 text:
   en: |-
     You can Ritual Summon this card with "Machine Angel Ritual". If this card is Ritual Summoned: You can make your opponent send 1 Spell/Trap they control to the GY. When this attacking card destroys an opponent's monster by battle and sends it to the GY: You can activate this effect; this card can make a second attack on an opponent's monster in a row. Once per turn, when your opponent activates a card or effect that targets a "Cyber Angel" Ritual Monster you control (Quick Effect): You can shuffle 1 Ritual Monster from your GY into the Deck, and if you do, destroy 1 card your opponent controls.
@@ -32,10 +32,7 @@ text:
     "기계천사의 의식"에 의해 의식 소환. ①: 이 카드가 의식 소환에 성공했을 경우에 발동할 수 있다. 상대는 자신 필드의 마법 / 함정 카드 1장을 묘지로 보내야 한다. ②: 이 카드의 공격으로 상대 몬스터를 파괴하고 묘지로 보냈을 때에 발동할 수 있다. 이 카드는 1번만 더 이어서 상대 몬스터에 공격할 수 있다. ③: 1턴에 1번, 자신 필드의 "사이버 엔젤" 의식 몬스터를 대상으로 하는 상대 효과가 발동했을 때에 발동할 수 있다. 자신 묘지의 의식 몬스터 1장을 골라 덱으로 되돌리고, 상대 필드의 카드 1장을 골라 파괴한다.
   zh-TW:
   zh-CN: |-
-    「机械天使的仪式」降临。
-    ①：这张卡仪式召唤成功的场合才能发动。对方必须把自身场上1张魔法·陷阱卡送去墓地。
-    ②：这张卡的攻击破坏对方怪兽送去墓地时才能发动。这张卡只再1次可以继续向对方怪兽攻击。
-    ③：1回合1次，自己场上的「电子化天使」仪式怪兽为对象的对方的效果发动时才能发动。选自己墓地1只仪式怪兽回到卡组，选对方场上1张卡破坏。
+    以"机械天使的仪式"降临。①：此卡仪式召唤成功的情况下可以发动。对手必须将自身场上的1张魔法・陷阱卡送至墓地。②：以此卡的攻击破坏对手怪兽并将其送至墓地时可以发动。此卡可继续攻击对手怪兽仅1次。③：1回合1次，以自己场上的"电子天使"仪式怪兽为对象的对手效果发动时可以发动。挑选自己墓地的1只仪式怪兽放回牌组，挑选对手场上的1张卡破坏。
 card_type: Monster
 monster_type_line: Fairy / Ritual / Effect
 attribute: LIGHT
@@ -122,4 +119,9 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: DP21-SC016
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Secret Rare
 yugipedia_page_id: 577926
