--- a/data/cards/76103404.yaml
+++ b/data/cards/76103404.yaml
@@ -12,7 +12,7 @@ name:
   ko: 사이버 쁘띠 엔젤
   ko_rr: Saibeo Ppeutti Enjel
   zh-TW:
-  zh-CN: 电子化小天使
+  zh-CN: 电子小天使
 text:
   en: |-
     If this card is Summoned: You can add 1 "Cyber Angel" monster or "Machine Angel Ritual" from your Deck to your hand. You can only use this effect of "Cyber Petit Angel" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 소환 / 반전 소환 / 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "사이버 엔젤" 몬스터 1장 또는 "기계천사의 의식" 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    「电子化小天使」的效果1回合只能使用1次。①：这张卡召唤·反转召唤·特殊召唤成功的场合才能发动。从卡组把1只「电子化天使」怪兽或者1张「机械天使的仪式」加入手卡。
+    此卡名的效果1回合仅可使用1次。①：此卡召唤・反转召唤・特殊召唤成功的情况下可以发动。从牌组将1只"电子天使"怪兽或1张"机械天使的仪式"加入手牌。
 card_type: Monster
 monster_type_line: Fairy / Effect
 attribute: LIGHT
@@ -142,6 +142,11 @@ sets:
     rarities:
     - Common
   - set_number: DP21-KR017
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC021
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
