--- a/data/cards/97946536.yaml
+++ b/data/cards/97946536.yaml
@@ -7,8 +7,8 @@ name:
   fr: Zekttaque Kou-ou
   it: Zektcolpo Kou-ou
   pt: Golzek Kou-ou
-  ja:
-  ja_romaji:
+  ja: ゼクトライク－<ruby>紅<rt>コウ</rt></ruby><ruby>黄<rt>オウ</rt></ruby>
+  ja_romaji: Zekutoraiku - Kouou
   ko:
   ko_rr:
   zh-TW:
@@ -94,4 +94,8 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  ja:
+  - set_number: WPP3-JP044
+    set_name: World Premiere Pack 2022
+    rarities:
 yugipedia_page_id: 845059
