--- a/data/cards/01861629.yaml
+++ b/data/cards/01861629.yaml
@@ -199,6 +199,10 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: TGS1-JP001
+    set_name: Tokyo Game Show 2022 promotional card
+    rarities:
+    - Normal Parallel Rare
   ko:
   - set_number: ST17-KR041
     set_name: Starter Deck 2017
