--- a/data/cards/12877076.yaml
+++ b/data/cards/12877076.yaml
@@ -1,7 +1,7 @@
 konami_id: 17729
 password: 12877076
 name:
-  en: Awakening of the Crystal Lord
+  en: Awakening of the Crystal Ultimates
   de:
   es:
   fr:
@@ -18,7 +18,7 @@ text:
     If you control an "Ultimate Crystal" monster: Activate 1 or both of the following effects, and resolve in sequence, OR: Reveal 1 "Ultimate Crystal" monster in your hand and activate 1 of the following effects;
     ● Take 1 "Bridge" card or 1 "Rainbow Refraction" from your Deck, and either add it to your hand or send it to the GY.
     ● Special Summon 1 "Crystal Beast" Monster Card from your hand, Deck, GY, or Spell & Trap Zone.
-    You can only activate 1 "Awakening of the Crystal Lord" per turn.
+    You can only activate 1 "Awakening of the Crystal Ultimates" per turn.
   de:
   es:
   fr:
@@ -37,6 +37,26 @@ property: Quick-Play
 series:
 - Crystal
 sets:
+  en:
+  - set_number: SDCB-EN0??
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+  de:
+  - set_number: SDCB-DE0??
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+  fr:
+  - set_number: SDCB-FR0??
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+  it:
+  - set_number: SDCB-IT0??
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
+  pt:
+  - set_number: SDCB-PT0??
+    set_name: 'Structure Deck: Legend of the Crystal Beasts'
+    rarities:
   ja:
   - set_number: SD44-JP016
     set_name: 'Structure Deck: Legend of the Crystals'
