--- a/data/cards/18847598.yaml
+++ b/data/cards/18847598.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 高等宝玉兽 琥珀猛犸
 text:
   en: |-
-    If "Advanced Dark" is not in the Field Zone, send this card to the GY. Once per turn, when your opponent activates a card or effect that targets your "Advanced Crystal Beast" card(s) and/or "Advanced Dark" (Quick Effect): You can negate the activation. Once per turn, when your "Advanced Crystal Beast" monster is targeted for an attack: You can negate the attack. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
+    If "Advanced Dark" is not in the Field Zone, send this monster to the GY. Once per turn, when your opponent activates a card or effect that targets your "Advanced Crystal Beast" card(s) and/or "Advanced Dark" (Quick Effect): You can negate the activation. Once per turn, when your "Advanced Crystal Beast" monster is targeted for an attack: You can negate the attack. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
   de:
   es:
   fr:
