--- a/data/cards/83575471.yaml
+++ b/data/cards/83575471.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 高等宝玉兽 红玉兽
 text:
   en: |-
-    If "Advanced Dark" is not in the Field Zone, send this card to the GY. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY. If this card is treated as a Continuous Spell: You can Special Summon this card, then you can Special Summon as many "Advanced Crystal Beast" Monster Cards as possible from your Spell & Trap Zone. You can only use this effect of "Advanced Crystal Beast Ruby Carbuncle" once per turn.
+    If "Advanced Dark" is not in the Field Zone, send this monster to the GY. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY. If this card is treated as a Continuous Spell: You can Special Summon this card, then you can Special Summon as many "Advanced Crystal Beast" Monster Cards as possible from your Spell & Trap Zone. You can only use this effect of "Advanced Crystal Beast Ruby Carbuncle" once per turn.
   de:
   es:
   fr:
