--- a/data/cards/19963185.yaml
+++ b/data/cards/19963185.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 高等宝玉兽 紫晶猫
 text:
   en: |-
-    If "Advanced Dark" is not in the Field Zone, send this card to the GY. Your "Advanced Crystal Beast" monsters can attack directly, but when they do so using this effect, the battle damage inflicted to your opponent is halved. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
+    If "Advanced Dark" is not in the Field Zone, send this monster to the GY. Your "Advanced Crystal Beast" monsters can attack directly, but when they do so using this effect, the battle damage inflicted to your opponent is halved. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
   de:
   es:
   fr:
