--- a/data/cards/45236142.yaml
+++ b/data/cards/45236142.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 高等宝玉兽 蓝钴鹰
 text:
   en: |-
-    If "Advanced Dark" is not in the Field Zone, send this card to the GY. You can send this card from your hand or field to the GY; add 1 "Advanced Dark" from your Deck to your hand. Once per turn: You can target 1 "Advanced Crystal Beast" card you control; either return it to the hand or place it on the top of the Deck. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
+    If "Advanced Dark" is not in the Field Zone, send this monster to the GY. You can send this card from your hand or field to the GY; add 1 "Advanced Dark" from your Deck to your hand. Once per turn: You can target 1 "Advanced Crystal Beast" card you control; either return it to the hand or place it on the top of the Deck. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
   de:
   es:
   fr:
