--- a/data/cards/71620241.yaml
+++ b/data/cards/71620241.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 高等宝玉兽 青玉天马
 text:
   en: |-
-    If "Advanced Dark" is not in the Field Zone, send this card to the GY. If this card is Summoned: You can place 1 of your "Advanced Crystal Beast" monsters that is banished, in your hand, Deck, or GY face-up in your Spell & Trap Zone as a Continuous Spell. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
+    If "Advanced Dark" is not in the Field Zone, send this monster to the GY. If this card is Summoned: You can place 1 of your "Advanced Crystal Beast" monsters that is banished, in your hand, Deck, or GY face-up in your Spell & Trap Zone as a Continuous Spell. If this face-up card is destroyed in a Monster Zone, you can place it face-up in your Spell & Trap Zone as a Continuous Spell, instead of sending it to the GY.
   de:
   es:
   fr:
