--- a/data/cards/25833572.yaml
+++ b/data/cards/25833572.yaml
@@ -51,7 +51,7 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
-  - set_number: SGX2-EN???
+  - set_number: SGX2-END01
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
@@ -68,7 +68,7 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
-  - set_number: SGX2-DE???
+  - set_number: SGX2-DED01
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
@@ -85,7 +85,7 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
-  - set_number: SGX2-FR???
+  - set_number: SGX2-FRD01
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
@@ -102,7 +102,7 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
-  - set_number: SGX2-IT???
+  - set_number: SGX2-ITD01
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
@@ -115,7 +115,7 @@ sets:
     set_name: "Legendary Collection 4: Joey's World Mega Pack"
     rarities:
     - Common
-  - set_number: SGX2-PT???
+  - set_number: SGX2-PTD01
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
