--- a/data/cards/71645242.yaml
+++ b/data/cards/71645242.yaml
@@ -12,7 +12,7 @@ name:
   ko: 블랙 가든
   ko_rr: Beullaek Gadeun
   zh-TW:
-  zh-CN: 黑色花园
+  zh-CN: 黑花园
 text:
   en: |-
     If a monster(s) is Normal or Special Summoned face-up, except by the effect of "Black Garden": Halve its ATK, then, the controller of that monster Special Summons 1 "Rose Token" (Plant/DARK/Level 2/ATK 800/DEF 800) to their opponent's field in Attack Position. (This ATK loss remains even if this card leaves the field.) You can target 1 monster in your GY with ATK equal to the total ATK of all Plant monsters on the field; destroy this card and as many Plant monsters on the field as possible, then, if you destroyed all of them, Special Summon that targeted monster.
@@ -32,7 +32,7 @@ text:
     ①: "블랙 가든"의 효과 이외로 몬스터가 앞면 표시로 일반 소환 / 특수 소환될 때마다 발동한다. 그 몬스터의 공격력을 절반으로 한다. 그 후, 그 컨트롤러는, 상대 필드에 "로즈 토큰"(식물족 / 어둠 / 레벨 2 / 공 800 / 수 800) 1장을 공격 표시로 특수 소환한다. ②: 필드의 모든 식물족 몬스터의 공격력의 합계와 같은 공격력을 가지는, 자신 묘지의 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 카드 및 필드의 식물족 몬스터를 전부 파괴한다. 전부 파괴했을 경우, 대상 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    ①：每次「黑色花园」的效果以外让怪兽表侧表示召唤·特殊召唤发动。那些怪兽的攻击力变成一半。那之后，那控制者在对方场上把1只「蔷薇衍生物」（植物族·暗·2星·攻/守800）攻击表示特殊召唤。②：以持有和场上的全部植物族怪兽的攻击力合计相同攻击力的自己墓地1只怪兽为对象才能发动。这张卡以及场上的植物族怪兽全部破坏。全部破坏的场合，作为对象的怪兽特殊召唤。
+    ①：每次有怪兽被以"黑花园"的效果以外的方法、以表侧表示召唤・特殊召唤则发动。将该怪兽的攻击力改成一半。然后，其控制者将1只"蔷薇衍生物"（植物族・暗・星2・攻／守800）以攻击表示特殊召唤至其对手场上。②：以自己墓地1只攻击力与场上所有植物族怪兽的攻击力合计相同的怪兽为对象可以发动。将此卡及场上的植物族怪兽全部破坏。全部都破坏了的情况下，将对象怪兽特殊召唤。
 card_type: Spell
 property: Field
 sets:
@@ -172,6 +172,11 @@ sets:
     rarities:
     - Super Rare
   - set_number: DP21-KR032
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC041
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
