--- a/data/cards/83121692.yaml
+++ b/data/cards/83121692.yaml
@@ -6,11 +6,11 @@ name:
   es: HÉROE Elemental Tempest
   fr: Tempête, HÉROS Élémentaire
   it: Tempesta EROE Elementale
-  pt: Heroí Elementar Tempestade
+  pt:
   ja: <ruby>Ｅ・ＨＥＲＯ<rt>エレメンタルヒーロー</rt></ruby> テンペスター
   ja_romaji: Erementaru Hīrō Tenpesutā
   ko: 엘리멘틀 히어로 템페스터
-  ko_rr:
+  ko_rr: Ellimenteul Hieoro Tempeseuteu
   zh-TW:
   zh-CN: 元素英雄 暴风侠
 text:
@@ -18,26 +18,24 @@ text:
     "Elemental HERO Avian" + "Elemental HERO Sparkman" + "Elemental HERO Bubbleman"
     Must be Fusion Summoned and cannot be Special Summoned by other ways. You can send 1 other card you control to the Graveyard to target 1 monster you control; while this card is face-up on the field, that monster cannot be destroyed by battle.
   de: |-
-    "Elementar-HELD Avian" + "Elementar-HELD Sparkman" + "Elementar-HELD Bubbleman"
-    Dieses Monster kann nicht als Spezialbeschwörung beschworen werden, außer durch eine Fusionsbeschwörung. Lege 1 Karte (außer dieser Karte) von deiner Spielfeldseite auf den Friedhof und wähle 1 Monster auf deiner Spielfeldseite. Solange sich diese Karte offen auf dem Spielfeld befindet, kann das gewählte Monster nicht als Ergebnis eines Kampfes zerstört werden. (Führe die Schadensberechnung normal durch).
+    „Elementar-HELD Avian“ + „Elementar-HELD Sparkman“ + „Elementar-HELD Bubbleman“
+    Muss als Fusionsbeschwörung beschworen werden und kann nicht auf andere Art als Spezialbeschwörung beschworen werden. Du kannst 1 andere Karte, die du kontrollierst, auf den Friedhof legen, um 1 Monster zu wählen, das du kontrollierst; solange diese Karte offen auf dem Spielfeld liegt, kann das Monster nicht durch Kampf zerstört werden.
   es: |-
     "HÉROE Elemental Avian" + "HÉROE Elemental Sparkman" + "HÉROE Elemental Bubbleman"
-    Este monstruo no puede ser Invocado mediante una Invocación Especial excepto mediante una Invocación de Fusión. Manda 1 carta (exceptuando esta) de tu Campo al Cementerio para seleccionar 1 monstruo en tu Campo. Mientras esta carta esté boca arriba en el Campo, el monstruo seleccionado no es destruido como resultado de una batalla. (El cálculo de daño se aplica normalmente.)
+    Este monstruo no puede ser Invocado mediante una Invocación Especial excepto mediante una Invocación de Fusión. Manda 1carta (exceptuando ésta) de tu Campo al Cementerio para seleccionar 1 monstruo en tu Campo. Mientras esta carta esté boca arriba en el Campo, el monstruo seleccionado no es destruido como resultado de una batalla. (El cálculo de daño se aplica normalmente.)
   fr: |-
     "Avian, HÉROS Élémentaire" + "Sparkman, HÉROS Élémentaire" + "Bubbleman, HÉROS Élémentaire"
     Ce monstre ne peut pas être Invoqué par Invocation Spéciale excepté par une Invocation Fusion. En envoyant 1 carte (exceptée cette carte) de votre Terrain au Cimetière, sélectionnez 1 monstre sur votre Terrain. Tant que cette carte est face recto sur le Terrain, le monstre sélectionné n'est pas détruite à l'issue d'un combat. (Le calcul des dommages est appliqué normalement.)
   it: |-
     "Avian EROE Elementale" + "Sparkman EROE Elementale" + "Bubbleman EROE Elementale"
     Deve essere Evocato tramite Fusione e non può essere Evocato Specialmente in altri modi. Puoi mandare 1 altra carta che controlli al Cimitero per scegliere come bersaglio 1 mostro che controlli; mentre questa carta è scoperta sul Terreno, quel mostro non può essere distrutto in battaglia.
-  pt: |-
-    "Elemental HERO Avian" + "Elemental HERO Sparkman" + "Elemental HERO Bubbleman"
-    Esta carta não pode ser Special Summoned, exceto por Fusion Summon. Você pode enviar 1 outra que você controla ao Cemitério para selecionar 1 monstro que você controla. Enquanto esta carta estiver virada para cima no campo, o monstro selecionado não pode ser destruído em batalha.
+  pt:
   ja: |-
     「<ruby>Ｅ・ＨＥＲＯ<rt>エレメンタルヒーロー</rt></ruby> フェザーマン」＋「<ruby>Ｅ・ＨＥＲＯ<rt>エレメンタルヒーロー</rt></ruby> スパークマン」＋「<ruby>Ｅ・ＨＥＲＯ<rt>エレメンタルヒーロー</rt></ruby> バブルマン」
     このモンスターは融合召喚でしか特殊召喚できない。このカード以外の自分フィールド上のカード１枚を墓地に送り、自分フィールド上のモンスター１体を選択する。このカードがフィールド上に表側表示で存在する限り、選択したモンスターは戦闘によっては破壊されない。(ダメージ計算は適用する)
   ko: |-
-    "엘리멘틀 히어로 페더맨" + "엘리멘틀 히어로 스파크맨" + "엘리멘틀 히어로 버블맨"
-    이 몬스터는 융합 소환으로밖에 소환할 수 없다. 특수 소환은 할 수 없다. 이 카드 이외의 자신 필드 위의 카드 1장을 묘지로 보내고, 자신 필드 위의 몬스터 1장을 선택한다. 이 카드가 필드 위에 앞면 표시로 존재하는 한, 선택한 몬스터는 전투에 의해서는 파괴되지 않는다 (데미지 계산은 적용한다).
+    "엘리멘틀 히어로 페더맨" ＋ "엘리멘틀 히어로 스파크맨" ＋ "엘리멘틀 히어로 버블맨"
+    이 몬스터는 융합 소환으로밖에 특수 소환할 수 없다. 이 카드 이외의 자신 필드 위의 카드 1장을 묘지로 보내고, 자신 필드 위의 몬스터 1장을 선택한다. 이 카드가 필드 위에 앞면 표시로 존재하는 한, 선택한 몬스터는 전투에 의해서는 파괴되지 않는다(데미지 계산은 적용한다).
   zh-TW:
   zh-CN: |-
     「元素英雄 羽翼侠」＋「元素英雄 电光侠」＋「元素英雄 水泡侠」
@@ -63,7 +61,7 @@ sets:
     set_name: 'Legendary Collection 2: The Duel Academy Years Mega Pack'
     rarities:
     - Super Rare
-  - set_number: SGX2-EN???
+  - set_number: SGX2-ENA21
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
@@ -77,7 +75,7 @@ sets:
     set_name: 'Legendary Collection 2: The Duel Academy Years Mega Pack'
     rarities:
     - Super Rare
-  - set_number: SGX2-DE???
+  - set_number: SGX2-DEA01
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
@@ -87,7 +85,7 @@ sets:
     rarities:
     - Ultra Rare
     - Ultimate Rare
-  - set_number: SGX2-FR???
+  - set_number: SGX2-FRA21
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
@@ -101,12 +99,12 @@ sets:
     set_name: 'Legendary Collection 2: The Duel Academy Years Mega Pack'
     rarities:
     - Super Rare
-  - set_number: SGX2-IT???
+  - set_number: SGX2-ITA21
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
   pt:
-  - set_number: SGX2-PT???
+  - set_number: SGX2-PTA21
     set_name: 'Speed Duel GX: Midterm Paradox'
     rarities:
     - Common
