--- a/data/cards/05611760.yaml
+++ b/data/cards/05611760.yaml
@@ -1,7 +1,7 @@
 konami_id: 17249
 password: 5611760
 name:
-  en: Bridge of Salvation
+  en: Rainbow Bridge of Salvation
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 救之桥梁
 text:
   en: |-
-    If Level 10 or higher monsters with 2 or more different Types are on the field: Shuffle as many cards from each player's hand, field, and GY as possible into the Deck, except this card, then each player draws 5 cards. You can banish this card from your GY; add 1 "Crystal Beast" monster and 1 Field Spell from your Deck to your hand. You can only apply each effect of "Bridge of Salvation" once per Duel.
+    If Level 10 or higher monsters with 2 or more different Types are on the field: Shuffle as many cards from each player's hand, field, and GY as possible into the Deck, except this card, then each player draws 5 cards. You can banish this card from your GY; add 1 "Crystal Beast" monster and 1 Field Spell from your Deck to your hand. You can only apply each effect of "Rainbow Bridge of Salvation" once per Duel.
   de:
   es:
   fr:
