--- a/data/cards/12877076.yaml
+++ b/data/cards/12877076.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     If you control an "Ultimate Crystal" monster: Activate 1 or both of the following effects, and resolve in sequence, OR: Reveal 1 "Ultimate Crystal" monster in your hand and activate 1 of the following effects;
-    ● Take 1 "Bridge" card or 1 "Rainbow Refraction" from your Deck, and either add it to your hand or send it to the GY.
+    ● Take 1 "Rainbow Bridge" card or 1 "Rainbow Refraction" from your Deck, and either add it to your hand or send it to the GY.
     ● Special Summon 1 "Crystal Beast" Monster Card from your hand, Deck, GY, or Spell & Trap Zone.
     You can only activate 1 "Awakening of the Crystal Ultimates" per turn.
   de:
