--- a/data/cards/28827503.yaml
+++ b/data/cards/28827503.yaml
@@ -1,7 +1,7 @@
 konami_id: 17262
 password: 28827503
 name:
-  en: Into the VRAINS!
+  en: Link into the VRAINS!
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 进入智能虚拟网
 text:
   en: |-
-    Special Summon 1 monster from your hand, but negate its effects, then, immediately after this effect resolves, Link Summon 1 Link Monster using materials you control, including the Summoned monster. This Link Summon cannot be negated, also your opponent cannot activate cards or effects when a monster is Link Summoned this way. If a Link Monster(s) you control is destroyed by battle or card effect while this card is in your GY: You can banish this card; add 1 monster with the same original Type as 1 of those destroyed monsters from your GY to your hand. You can only activate 1 "Into the VRAINS!" per turn.
+    Special Summon 1 monster from your hand, but negate its effects, then, immediately after this effect resolves, Link Summon 1 Link Monster using materials you control, including the Summoned monster. This Link Summon cannot be negated, also your opponent cannot activate cards or effects when a monster is Link Summoned this way. If a Link Monster(s) you control is destroyed by battle or card effect while this card is in your GY: You can banish this card; add 1 monster with the same original Type as 1 of those destroyed monsters from your GY to your hand. You can only activate 1 "Link into the VRAINS!" per turn.
   de:
   es:
   fr:
